--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -160,25 +160,6 @@
     "ok": "Ok",
     "confirm_delete": "Confirm Delete"
   },
-  "profile": "Profile",
-  "edit_profile": "Edit profile",
-  "logout": "logout",
-  "login": "Login",
-  "login_title": "Welcome Back",
-  "have_no_account": "Don't have an account",
-  "create_one_account": "Click here to create one",
-  "please_enter": "Please enter",
-  "username": "Username",
-  "password": "Password",
-  "confirm_password": "Confirm Password",
-  "remember_me": "Remember Me",
-  "register": "Create account",
-  "register_welcome": "Welcome",
-  "register_title": "It only takes a few seconds to create your account",
-  "read_and_agree": "I have read and agree to the terms of service",
-  "have_an_account": "Already have an account",
-  "restore_defaults": "Restore defaults",
-
   "atharv": {
     "title": {
       "adduser": "Add User",
@@ -655,5 +636,23 @@
       "createBank": "Add Bank Details",
       "submit":"Submit"
     }
-  }
+  },
+  "profile": "Profile",
+  "edit_profile": "Edit profile",
+  "logout": "logout",
+  "login": "Login",
+  "login_title": "Welcome Back",
+  "have_no_account": "Don't have an account",
+  "create_one_account": "Click here to create one",
+  "please_enter": "Please enter",
+  "username": "Username",
+  "password": "Password",
+  "confirm_password": "Confirm Password",
+  "remember_me": "Remember Me",
+  "register": "Create account",
+  "register_welcome": "Welcome",
+  "register_title": "It only takes a few seconds to create your account",
+  "read_and_agree": "I have read and agree to the terms of service",
+  "have_an_account": "Already have an account",
+  "restore_defaults": "Restore defaults"
 }
