added list and create component for showing user details and taking input from enduser  and perform all type of CRUD on company module

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -13,6 +13,7 @@
     "store.storePurchaseRequisitionApprovalHODComponent": "Store Purchase Requisition Approval-HOD",
     "branch": "Branch",
     "user": "User",
+    "company": "Company",
     "material": "Material",
     "material.form-controls": "Form Controls",
     "material.form-controls.autocomplete": "Autocomplete",
@@ -138,6 +139,7 @@
     "userName": "Username",
     "designation": "Designation",
     "branch": "Branch Name",
+    "companyName": "Company",
     "operation": "Operation",
     "fullName": "Full Name",
     "applicantName": "Applicant Name",
@@ -210,6 +212,9 @@
       "morgagedAssets": "Mortgaged Assets",
       "existingFacility": "Existing Facility",
       "amountOfInstallment":"Amount Of Installment",
+      "companyName": "Company Name",
+      "defaultPass": "Default Password",
+      "authorityName": "Authority Name",
       "specify": "Please Specify",
       "rejected": "Rejected",
       "Telphone": "Telephone Number",
