--- a/src/assets/i18n/mr-IN.json
+++ b/src/assets/i18n/mr-IN.json
@@ -13,6 +13,7 @@
     "store.storePurchaseRequisitionApprovalHODComponent": "स्टोअर खरेदी मागणी मंजूरी-HOD",
     "branch": "शाखा",
     "user": "युजर",
+    "company": "कंपनी",
     "material": "Material",
     "material.form-controls": "Form Controls",
     "material.form-controls.autocomplete": "Autocomplete",
@@ -105,6 +106,7 @@
     "lastModifiedBy": "LastModifiedBy",
     "branchName": "शाखेचे नाव",
     "branchcode": "शाखा कोड",
+    "companyName": "कंपनी",
     "branchType": "शाखा प्रकार",
     "phone": "फोन",
     "email": "ईमेल",
@@ -174,6 +176,7 @@
       "adressDetails": "पत्ता तपशील",
       "basicInformationn": "मुलभूत माहिती",
       "ragisteredAddress": "नोंदणीकृत पत्ता",
+      "companyName": "कंपनीचे नाव",
       "basicDetails": "मूलभूत तपशील",
       "personalInfo": "वैयक्तिक माहिती",
       "basicLoanInfo": "मूलभूत कर्ज माहिती",
@@ -183,6 +186,8 @@
       "contactInformationn": "संपर्क माहिती",
       "currentAddress": "वर्तमान पत्ता माहिती",
       "permenentAddress": "कायमस्वरूपी पत्ता माहिती",
+      "defaultPass": "डीफॉल्ट पासवर्ड",
+      "authorityName": "अधिकाराचे नाव",
       "employeeInfo": "रोजगार माहिती",
       "employeeAdressInfo": "रोजगार पत्ता माहिती",
       "credentials": "क्रेडेन्शियल्स",
