Added new module parameter lookup and added four new component in this module for adding financial year and curency info

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -11,6 +11,9 @@
     "store": "Store",
     "store.storePurchaseRequisitionComponent": "Store Purchase Requisition",
     "store.storePurchaseRequisitionApprovalHODComponent": "Store Purchase Requisition Approval-HOD",
+    "parameter": "Parameter",
+    "parameter.currency": "Currency",
+    "parameter.financial": "Financial Year",
     "branch": "Branch",
     "user": "User",
     "company": "Company",
